Account for the view's origin not lining up with the widget's. b=190290 r=bzbarsky sr=roc